cabal-version:       2.4

name:                pandoc-ansi
version:             0.1.0.0
synopsis:            ANSI writers for Pandoc
-- description:
-- bug-reports:
license:             GPL-2.0-only
license-file:        COPYING.md
author:              Greg Pfeil
maintainer:          greg@technomadic.org
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md
                   , README.md

library
  exposed-modules:     Text.Pandoc.Writers.Ansi
  other-modules:       System.Console.ANSI.Helpers
                     , System.Console.ANSI.VTE
  default-extensions:  LambdaCase
  build-depends:       ansi-terminal
                     , base >=4.12.0.0
                     , containers
                     , doclayout
                     , pandoc >=2.8
                     , pandoc-types
                     , text
  ghc-options:        -O2 -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
